# RPIPicoUSBHostExp

./: .gitignore  CMakeLists.txt  README.md
exp/Pico2USBHostSerial/: CMakeLists.txt
exp/Pico2USBHostSerial/src/: CMakeLists.txt  cdc_app.c  main.c  tusb_config.h
exp/PicoUSBHost/: CMakeLists.txt
exp/PicoUSBHost/src/: CMakeLists.txt  cdc_app.c  hid_app.c  main.c  msc_app.c  tusb_config.h
exp/PicoUSBHostSerial/: CMakeLists.txt
exp/PicoUSBHostSerial/src/: CMakeLists.txt  cdc_app.c  main.c  tusb_config.h
exp/RP2040ZeroFlashClient/: CMakeLists.txt
exp/RP2040ZeroFlashClient/src/: main.c
exp/RP2040ZeroFlashSlave/: CMakeLists.txt
exp/Tiny2040FlashClient/: CMakeLists.txt
exp/Tiny2040FlashClient/src/: CMakeLists.txt  LICENSE  main.c
